--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 html, body {
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     padding: 0px;
     margin: 0px;
     color: #e3e2e8;
